--- a/snippets/card-product.liquid
+++ b/snippets/card-product.liquid
@@ -185,7 +185,7 @@
             {%- endif -%}
 
             {% if card_product.price == 0 %}
-              <a href="/pages/contact?product={{ card_product.title | url_encode }}" class="card__button">
+              <a href="/pages/request-a-quote?product={{ card_product.title | url_encode }}" class="card__button">
                 Request Quote
               </a>
             {% else %}
