Customize login page: add logo setting and styling

--- a/assets/gls-auth.css
+++ b/assets/gls-auth.css
@@ -122,3 +122,14 @@
 .gls-auth-card .login-view:has(~ .recover-password-view:target) {
   display: none;
 }
+
+.gls-auth-logo {
+  margin-bottom: 2rem;
+  display: flex;
+  justify-content: center;
+}
+
+.gls-auth-logo img {
+  display: block;
+  height: auto;
+}
