--- a/sections/main-login.liquid
+++ b/sections/main-login.liquid
@@ -18,6 +18,20 @@
 <div class="gls-auth-page section-{{ section.id }}-padding">
   <div class="gls-auth-card">
     
+    {%- if section.settings.logo != blank -%}
+      <div class="gls-auth-logo">
+        <a href="{{ routes.root_url }}">
+          <img
+            src="{{ section.settings.logo | image_url: width: section.settings.logo_width }}"
+            alt="{{ shop.name }}"
+            width="{{ section.settings.logo_width }}"
+            height="{{ section.settings.logo_width | divided_by: section.settings.logo.aspect_ratio | ceil }}"
+            loading="eager"
+          >
+        </a>
+      </div>
+    {%- endif -%}
+
     <div id="recover" tabindex="-1" class="recover-password-view" style="display: none;">
       <h1>
         {{ 'customer.recover_password.title' | t }}
@@ -171,6 +185,21 @@
 {
   "name": "t:sections.main-login.name",
   "settings": [
+    {
+      "type": "image_picker",
+      "id": "logo",
+      "label": "Logo"
+    },
+    {
+      "type": "range",
+      "id": "logo_width",
+      "min": 50,
+      "max": 300,
+      "step": 10,
+      "default": 150,
+      "unit": "px",
+      "label": "Logo width"
+    },
     {
       "type": "header",
       "content": "t:sections.all.padding.section_padding_heading"
