Add content text alignment setting to Our Story section

--- a/sections/gls-our-story.liquid
+++ b/sections/gls-our-story.liquid
@@ -65,6 +65,7 @@
   #ContentColumn-{{ section.id }} .gls-our-story__text {
     color: {{ section.settings.text_color }};
     font-family: {{ section.settings.text_font_family }};
+    text-align: {{ section.settings.content_text_alignment }};
     margin-bottom: 2rem;
   }
 {%- endstyle -%}
@@ -352,6 +353,18 @@
       "id": "text_color",
       "label": "Text Color",
       "default": "#000000"
+    },
+    {
+      "type": "select",
+      "id": "content_text_alignment",
+      "options": [
+        { "value": "left", "label": "Left" },
+        { "value": "center", "label": "Center" },
+        { "value": "right", "label": "Right" },
+        { "value": "justify", "label": "Justify" }
+      ],
+      "default": "left",
+      "label": "Content Text Alignment"
     },
     {
       "type": "text",
